--- a/graf_vsetko/styleGraf.css
+++ b/graf_vsetko/styleGraf.css
@@ -1,36 +1,71 @@
-h2{
-    text-align: center;
-  }
-  .layer{
-    width: 70%;
-    margin-right: auto;
-    margin-left: auto;
-    display: flex;
-  }
-  
-  section {
-    border:4px solid grey;
-    border-radius:15px;
-    box-shadow: 5px 5px 5px grey;
-   
-    height:400px;
-    padding: 20px;
-    margin:10px;
-  }
-  
-  #plotSettings {
-    width:160px;
-  }
-  
-  #plot {
-    width:550px;
-  }
-  
- .rovnica {
-    text-align: center;
-  }
+h2 {
+  text-align: center;
+}
+.layer {
+  margin-right: auto;
+  margin-left: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  #normala {
-    font-size: x-large;
-    color: red;
+section {
+  border: 4px solid grey;
+  border-radius: 15px;
+  box-shadow: 5px 5px 5px grey;
+
+  height: 400px;
+  padding: 20px;
+  margin: 10px;
+}
+
+#plotSettings {
+  width: 360px;
+  height: 450px;
+  background-color: white;
+  text-align: center;
+}
+
+#plotSettings input {
+  width: 70%;
+}
+
+#plot {
+  width: 590px;
+  background-color: white;
+}
+
+.rovnica {
+  text-align: center;
+}
+
+#normala {
+  font-size: x-large;
+  color: red;
+}
+
+body {
+  background-image: url("../images/graf.png");
+  background-size: 100vw 100vh;
+  background-repeat: no-repeat;
+}
+
+
+@media screen and (max-width: 903px) {
+  body {
+      background-image: url("../images/mobile_bg.png");
   }
+  .layer {
+    display: block;
+  }
+  #plotSettings {
+    margin: auto;
+    width: 95%;
+  }
+  #plot {
+    margin: auto;
+    width: 95%;
+  }
+ 
+  
+}
