--- a/mainStyle.css
+++ b/mainStyle.css
@@ -1,6 +1,7 @@
 body {
-    background-image: url("images/bcg.png");
-    background-size: 100vw 100vh;
+    
+     background-image: url("images/bgb.png");  
+    background-size: 100vw 50vh;
     background-repeat: no-repeat;
 }
 
@@ -11,3 +12,15 @@ body {
         background-size: auto;
     }
   }
+
+
+#carousel-container {
+    width: 40rem;
+    height: 25rem;
+    margin: auto;
+    margin-top: 13rem;
+    border-radius: 8px;
+    
+    background-color: white;
+    border: 2px solid black;
+}
