--- a/graf_vsetko/styleGraf.css
+++ b/graf_vsetko/styleGraf.css
@@ -52,7 +52,7 @@ body {
 }
 
 nav {
-  background: linear-gradient(to bottom, #96d3e7, #d9d9d9);
+  background: linear-gradient(to bottom, #64c8e9, #d9d9d9);
 }
 
 
