--- a/mainStyle.css
+++ b/mainStyle.css
@@ -1,7 +1,9 @@
 body {
-    
+    background-color: rgb(201, 223, 201);
     background-image: url("images/MAT1 (1).png"); 
     background-repeat: no-repeat;
+    background-size: 100vw auto;
+
 }
 
 
@@ -34,6 +36,22 @@ body {
 
 h2{
     text-align: center;
+}
+
+#box-container {
+    display: flex;
+    height: 20rem;
+    margin-top: 9rem;
+    margin-bottom: 4.5rem;
+}
+
+.box{
+    box-shadow: 5px 5px 5px grey;
+    width: 20rem;
+    margin: auto;
+    background-color: white;
+    height:100%;
+    border-radius: 12px;
 }
 
 @media screen and (max-width: 903px) {
