--- a/mainStyle.css
+++ b/mainStyle.css
@@ -1,14 +1,20 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 body {
     background-color: #f3f4f6;
-    /* background-image: url("images/matt1.png");  */
+    background-image: url("images/headBG.png"); 
+    background-position: top right;
+    
+    background-size: 100% auto;
     background-repeat: no-repeat;
-    background-size: 100vw auto;
+    font-family: 'Roboto', sans-serif;
 
 }
 
 
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1250px) {
     body {
         background-size: auto;
     }
@@ -55,6 +61,18 @@ h2{
     height:100%;
     border-radius: 12px;
     border: 1px solid black;
+}
+
+#header-container {
+    width: 30%;
+    margin: auto;
+    margin-top: 5%;
+    text-align: center;
+    border: 1px solid orangered;
+    padding: 1rem;
+    border-radius: 6px;
+    /* background-image: linear-gradient(to bottom, rgba(255, 69, 0, 0.3), rgba(255, 255, 255, 0.6)); */
+    background-color: rgba(255, 69, 0, 0.1);
 }
 
 @media screen and (max-width: 903px) {
