--- a/mainStyle.css
+++ b/mainStyle.css
@@ -4,10 +4,8 @@
 body {
     background-color: #f3f4f6;
     background-image: url("images/headBG.png"); 
-    background-position: top right;
-    
-    background-size: 100% auto;
     background-repeat: no-repeat;
+    background-size: 100vw auto;
     font-family: 'Roboto', sans-serif;
 
 }
