--- a/mainStyle.css
+++ b/mainStyle.css
@@ -69,7 +69,15 @@ h2{
     background-color: rgba(255, 69, 0, 0.1);
 }
 
+#NM {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
+.form-check-input:checked {
+    background-color: black;
+}
 
 @media screen and (max-width: 1250px) {
     body {
