--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,9 @@
 .nav-item.dropdown:hover  .dropdown-menu {
     display: block;
 }
-
+.navbar {
+    box-shadow: 0px -5px 15px #000000;
+}
 
 
 mjx-container.MathJax {
