--- a/mainStyle.css
+++ b/mainStyle.css
@@ -3,14 +3,16 @@
 
 body {
     background-color: #f3f4f6;
-    background-image: url("images/headBG.png"); 
-    background-repeat: no-repeat;
-    background-size: 100vw auto;
     font-family: 'Roboto', sans-serif;
 
 }
 
-
+header {
+    background-image:url("images/headBG.png") ;
+    background-size: cover;
+    background-position: right;
+    height: 600px;
+}
 
 
 
@@ -21,19 +23,9 @@ body {
     border-radius: 8px;
     background-color: white;
     box-shadow:5px 5px 5px grey;
+   
 }
 
-#info {
-    margin-left:5rem;
-    margin-top: 1rem;
-    width: 17rem;
-    border-radius: 8px;
-    padding: 1rem;
-    font-family: 'Dosis', sans-serif;
-    border: 1px solid grey;
-    background-color: white;
-    visibility: hidden;
-}
 
 h2{
     text-align: center;
@@ -41,20 +33,20 @@ h2{
 
 #box-container {
     display: flex;
-    height: 10rem;
-    margin-top: 9rem;
-    margin-bottom: 4.5rem;
+    width: 75%;
+    height: 7rem;
+    margin: auto;
     visibility: hidden;
+    
 }
 
 .box{
     box-shadow: 5px 5px 5px grey;
-    width: 20rem;
+    width: 15rem;
     margin: auto;
     background-color: white;
     height:100%;
     border-radius: 12px;
-    border: 1px solid black;
 }
 
 #header-container {
@@ -103,10 +95,6 @@ h2{
     margin-top: 10rem;
 }
 @media screen and (max-width: 903px) {
-    #info {
-        margin: auto;
-        margin-top: 5rem;
-    }
     #carousel-container {
         width: 80%;
         
@@ -124,9 +112,6 @@ h2{
     }
 }
 @media screen and (max-width: 413px) {
-    #info{
-        width: 70%;
-    }
     .pad {
         font-size: large;
         padding: 4px;
