added few folders for better maintenance

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,10 @@
 /* .navbar-nav {
      margin-right: 5rem; 
 } */
+
+.navbar {
+    padding: 0;
+}
 .nav-item {
     font-family: 'Dosis', sans-serif;
     font-size: 1.1rem;
