--- a/landingPage/mainStyle.css
+++ b/landingPage/mainStyle.css
@@ -8,7 +8,7 @@ body {
 }
 
 header {
-    background-image:url("images/headBG.png") ;
+    background-image:url("../images/headBG.png") ;
     background-size: cover;
     background-position: right;
     height: 600px;
