--- a/landingPage/mainStyle.css
+++ b/landingPage/mainStyle.css
@@ -8,10 +8,10 @@ body {
 }
 
 header {
-    background-image:url("../images/headBG.png") ;
-    background-size: cover;
+    background-image:url("../images/mainBG.svg") ;
+    
     background-position: right;
-    height: 600px;
+    height: 400px;
 }
 
 
@@ -52,7 +52,7 @@ h2{
 #header-container {
     width: 30%;
     margin: auto;
-    margin-top: 5%;
+    margin-top: 2%;
     text-align: center;
     border: 2px solid orangered;
     padding: 1rem;
