--- a/landingPage/mainStyle.css
+++ b/landingPage/mainStyle.css
@@ -1,127 +1,121 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
 body {
-    background-color: #f3f4f6;
-    font-family: 'Roboto', sans-serif;
-
+  background-color: white;
+  font-family: "Roboto", sans-serif;
 }
 
 header {
-    background-image:url("../images/mainBG.svg") ;
-    
-    background-position: right;
-    height: 400px;
+  background-image: url("../images/mainBG.svg");
+
+  background-position: right;
+  height: 400px;
 }
-
-
-
 
 #carousel-container {
-    width: 35rem;
-    margin: 11rem auto 6rem auto;
-    border-radius: 8px;
-    background-color: white;
-    box-shadow:5px 5px 5px grey;
-   
+  width: 35rem;
+  margin: 11rem auto 6rem auto;
+  border-radius: 8px;
+  background-color: white;
+  box-shadow: 5px 5px 5px grey;
 }
 
-
-h2{
-    text-align: center;
-}
-
-#box-container {
-    display: flex;
-    width: 75%;
-    height: 7rem;
-    margin: auto;
-    visibility: hidden;
-    
-}
-
-.box{
-    box-shadow: 5px 5px 5px grey;
-    width: 15rem;
-    margin: auto;
-    background-color: white;
-    height:100%;
-    border-radius: 12px;
+h2 {
+  text-align: center;
 }
 
 #header-container {
-    width: 30%;
-    margin: auto;
-    margin-top: 2%;
-    text-align: center;
-    border: 2px solid orangered;
-    padding: 1rem;
-    border-radius: 6px;
-    /* background-image: linear-gradient(to bottom, rgba(255, 69, 0, 0.3), rgba(255, 255, 255, 0.6)); */
-    background-color: rgba(255, 69, 0, 0.1);
+  width: 30%;
+  margin: auto;
+  margin-top: 2%;
+  text-align: center;
+  border: 2px solid #ff4500;
+  padding: 1rem;
+  border-radius: 6px;
+  /* background-image: linear-gradient(to bottom, rgba(255, 69, 0, 0.3), rgba(255, 255, 255, 0.6)); */
+  background-color: rgba(255, 69, 0, 0.1);
+}
+
+#main-content {
+  width: 80%;
+  margin: 5rem auto;
 }
 
 #NM {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-
 .form-check-input:checked {
-    background-color: black;
-    border-color: transparent;
+  background-color: black;
+  border-color: transparent;
 }
 
 .form-check-input:focus {
-    box-shadow: none;
-    outline: none;
-    border-color: transparent;
+  box-shadow: none;
+  outline: none;
+  border-color: transparent;
 }
-  
-  
 
+#card-holder {
+  display: flex;
+  justify-content: center;
+  margin: 4rem auto;
+}
+
+.card {
+  margin: 1rem;
+  width: 15rem;
+}
 
 @media screen and (max-width: 1250px) {
-    body {
-        background-size: auto;
-    }
-    #header-container {
-        width: 40%;
+  body {
+    background-size: auto;
+  }
+  #header-container {
+    width: 40%;
+  }
+}
+
+#example {
+  margin-top: 10rem;
+}
+@media screen and (max-width: 903px) {
+  #carousel-container {
+    width: 80%;
+  }
+  .pad {
+    font-size: x-large;
+    padding: 4px;
+  }
+  .navbar-nav {
+    margin: auto;
+  }
+  #header-container {
+    width: 60%;
+  }
+}
+@media screen and (max-width: 630px) {
+    #card-holder {
+        display: block;
+        
+      }
+    .card {
+        margin: 1.5rem auto;
+        width: 90%;
+        
     }
   }
 
-#example {
-    margin-top: 10rem;
-}
-@media screen and (max-width: 903px) {
-    #carousel-container {
-        width: 80%;
-        
-    }
-    .pad {
-        font-size: x-large;
-        padding: 4px;
-      
-      }
-    .navbar-nav {
-        margin: auto;
-    }
-    #header-container {
-        width: 60%;
-    }
-}
 @media screen and (max-width: 500px) {
-    #header-container {
-        width: 85%;
-    }
+  #header-container {
+    width: 85%;
+  }
 }
 @media screen and (max-width: 413px) {
-    .pad {
-        font-size: large;
-        padding: 4px;
-      
-    }
-    
-
+  .pad {
+    font-size: large;
+    padding: 4px;
+  }
 }
