--- a/landingPage/mainStyle.css
+++ b/landingPage/mainStyle.css
@@ -69,6 +69,10 @@ h2 {
   width: 15rem;
 }
 
+#intro {
+  color: grey;
+}
+
 @media screen and (max-width: 1250px) {
   body {
     background-size: auto;
