--- a/linearnaAlgebra/style.css
+++ b/linearnaAlgebra/style.css
@@ -1,31 +1,50 @@
 body {
-    background-color: rgb(50, 72, 83);
-    background-image: url("../images/LAbg.svg");
+  background-color: rgb(50, 72, 83);
+  background-image: url("../images/LAbg.svg");
 }
 
 main {
-    margin: 5rem auto;
-    width:80%; 
-    text-align: center;
+  margin: 5rem auto;
+  width: 80%;
+  text-align: center;
 }
 
 #latitle {
-    margin-bottom: 3rem;
+  margin-bottom: 3rem;
 }
 
-
-
 .card {
-    background-color: dodgerblue;
-    color: black;
-    padding: 4rem;
-    height: 6rem;
-  }
-  
-  .cards {
-    max-width: 1200px;
-    margin: 0 auto;
-    display: grid;
-    gap: 1rem;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  }
+  color: black;
+  padding: 4rem;
+  height: 6rem;
+  justify-content: center;
+}
+
+.cards {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+}
+
+.card:hover {
+    background-color: rgb(219, 238, 245);
+    transition: ease 0.4s;
+}
+
+#exercise {
+    border: 1px dashed blue;
+}
+
+@media screen and (max-width: 380px) {
+    .cards {
+        
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        
+      }
+      .card {
+        padding: 2rem;
+        
+      }
+}
