--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,9 @@
     color: white;
 }
 
+#nightMode:hover {
+    border-top: 1px solid transparent;
+}
 
 
 .navbar-nav .nav-link.active {
@@ -82,7 +85,7 @@
     display: block;
 }
 .navbar {
-    box-shadow: 0px -5px 15px #000000;
+    /* box-shadow: 0px -5px 15px #000000; */
 }
 
 
