math theme added header BG

--- a/landingPage/mainStyle.css
+++ b/landingPage/mainStyle.css
@@ -6,7 +6,7 @@ body {
 }
 
 header {
-  background-image: url("../images/constrBG.svg");
+  background-image: url("../images/mainBGM.svg");
 
   background-position: right;
   height: 400px;
