--- a/landingPage/mainStyle.css
+++ b/landingPage/mainStyle.css
@@ -7,8 +7,7 @@ body {
 
 header {
   background-image: url("../images/mainBGM.svg");
-
-  background-position: center;
+  background-position: left;
   height: 400px;
   box-shadow: 0px -5px 15px #000000;
 }
@@ -25,7 +24,7 @@ h2 {
   text-align: center;
   padding: 1rem;
   border-radius: 6px;
-  
+ 
   
 }
 
@@ -73,6 +72,12 @@ h2 {
   }
   #header-container {
     width: 40%;
+  }
+}
+
+@media screen and (max-width: 1060px) {
+  #header-container {
+    background-color: rgba(255,255,255,0.7);
   }
 }
 
