--- a/landingPage/mainStyle.css
+++ b/landingPage/mainStyle.css
@@ -6,7 +6,7 @@ body {
 }
 
 header {
-  background-image: url("../images/mainBGM.svg");
+  background-image: url("../images/newBG.svg");
   background-position: left;
   height: 400px;
   box-shadow: 0px -5px 15px #000000;
