--- a/determinant_sarus/style.css
+++ b/determinant_sarus/style.css
@@ -5,9 +5,6 @@
     margin: 5rem;
 }
 
-#1 {
-    text-decoration: line-through;
-}
 
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
@@ -16,6 +13,17 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   
   margin: 0;
+}
+
+#matrix {
+  margin: auto;
+  border-right: 1px solid black;
+  border-left: 1px solid black;
+}
+
+#matrix td:focus-within input {
+  outline: none;
+  background-color: greenyellow;
 }
 
 /* Firefox */
