--- a/determinant_sarus/style.css
+++ b/determinant_sarus/style.css
@@ -7,8 +7,8 @@
 
 
 /* Chrome, Safari, Edge, Opera */
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
+.inputNum::-webkit-outer-spin-button,
+.inputNum::-webkit-inner-spin-button {
   appearance: none;
   -webkit-appearance: none;
   margin: 0;
