--- a/determinant_sarus/style.css
+++ b/determinant_sarus/style.css
@@ -61,3 +61,15 @@ input[type=number] {
   z-index: 0;
 }
 
+.nav-tabs .nav-link {
+  color: #333;
+  border: none;
+  background: none;
+  
+}
+.nav-tabs .nav-link.active {
+  color: #0275d8;
+  border: none;
+  background: none;
+  border-bottom: 3px solid #0275d8;
+}
