--- a/linearnaAlgebra/style.css
+++ b/linearnaAlgebra/style.css
@@ -48,11 +48,37 @@ main {
     background-color: #e9e9e9;
 }
 
+.nav-link {
+  color: orange;
+  border-radius: 6px;
+  margin-right: 1rem;
+  background-color: white;
+}
+
+.nav-link:hover {
+  background-color: orange;
+  color: black;
+}
+
 #exercise:hover  {
   border: 1px solid gray;
 }
+#calcIcon {
+  display: none;
+}
+
+@media screen and (max-width: 992px) {
+  .nav-link {
+    color: black;
+    text-align: center;
+    background-color: #f5c05d;
+  }
+}
 
 @media screen and (max-width: 380px) {
+  .bi-calculator {
+    display: none;
+  }
     .cards {
         
         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
