--- a/linearnaAlgebra/témy/detStvMatice/style.css
+++ b/linearnaAlgebra/témy/detStvMatice/style.css
@@ -25,8 +25,9 @@
 
 
 .nav-item a:hover {
-  background-color: rgb(231, 231, 231);
-  color: black;
+  background-color: orangered;
+  color: white;
+  
 }
 
 .flex-column {
@@ -69,8 +70,14 @@ input[type=number] {
 }
 
 .nav-tabs .nav-link.active {
-  color: #212529;
+  color: orangered;
+  /* color: #212529 */
   border: none;
   background: none;
-  border-bottom: 3px solid #212529;
+  border-bottom: 3px solid orangered;
 }
+
+.sidebar {
+  box-shadow: 8px 0 10px -4px rgba(0,0,0,0.2);
+}
+
