more styles moved

--- a/styleAll.css
+++ b/styleAll.css
@@ -50,4 +50,18 @@
   ::-webkit-scrollbar-thumb:hover {
     background-color: white;
   }
+  .nav-item {
+    margin: 10px 0 0 6px;
+  }
   
+  .nav-item a {
+    color: rgb(129, 126, 126);
+    border-radius: 4px;
+  }
+  
+  
+  .nav-item a:hover {
+    
+    color: orangered;
+    
+  }
