better code split + new theme added, minor fixes

--- a/components/sidebar.html
+++ b/components/sidebar.html
@@ -32,10 +32,10 @@
           <a class="nav-link" href="#">Výpočet inverznej matice</a>
        </li>
        <li class="nav-item">
-          <a class="nav-link" href="#">Definícia determinantu štvorcovej matice</a>
+          <a class="nav-link" href="../detStvMatice/index.html">Definícia determinantu štvorcovej matice</a>
        </li>
        <li class="nav-item">
-          <a class="nav-link" href="#">Determinant a riadkové operácie</a>
+          <a class="nav-link" href="../deterRiadkoveOperacie/index.html">Determinant a riadkové operácie</a>
        </li>
        <li class="nav-item">
           <a class="nav-link" href="#">Inverzná matica pomocou determinantov</a>
