added all indexes sites

--- a/components/sidebar.html
+++ b/components/sidebar.html
@@ -10,26 +10,26 @@
        </li>
        <hr>
        <li class="nav-item">
-          <a class="nav-link " href="#">Úvod</a>
+          <a class="nav-link " href="../uvod/index.html">Úvod</a>
        </li>
        <li class="nav-item">
-          <a class="nav-link " href="#">Riadkové operácie</a>
+          <a class="nav-link " href="../riadkoveOperacie/index.html">Riadkové operácie</a>
        </li>
        <li class="nav-item">
-          <a class="nav-link" href="#">Gaussov tvar matice</a>
+          <a class="nav-link" href="../gaussovTvarMatice/index.html">Gaussov tvar matice</a>
        </li>
        <li class="nav-item">
-          <a class="nav-link" href="#">Výpočet gaussovho tvaru matice</a>
+          <a class="nav-link" href="../vypočetGauss/index.html">Výpočet gaussovho tvaru matice</a>
        </li>
        </li>
        <li class="nav-item">
-          <a class="nav-link" href="#">Algebraické operácie s maticami</a>
+          <a class="nav-link" href="../algebrOperacieMatice/index.html">Algebraické operácie s maticami</a>
        </li>
        <li class="nav-item">
-          <a class="nav-link" href="#">Štvorcové matice, pojem inverznej matice</a>
+          <a class="nav-link" href="../stvMatica/index.html">Štvorcové matice, pojem inverznej matice</a>
        </li>
        <li class="nav-item">
-          <a class="nav-link" href="#">Výpočet inverznej matice</a>
+          <a class="nav-link" href="../invMaticaVypocet">Výpočet inverznej matice</a>
        </li>
        <li class="nav-item">
           <a class="nav-link" href="../detStvMatice/index.html">Definícia determinantu štvorcovej matice</a>
@@ -38,13 +38,13 @@
           <a class="nav-link" href="../deterRiadkoveOperacie/index.html">Determinant a riadkové operácie</a>
        </li>
        <li class="nav-item">
-          <a class="nav-link" href="#">Inverzná matica pomocou determinantov</a>
+          <a class="nav-link" href="../invMaticaDet/index.html">Inverzná matica pomocou determinantov</a>
        </li>
        <li class="nav-item">
-          <a class="nav-link" href="#">Dôležité vzťahy medzi uvedenými pojmami</a>
+          <a class="nav-link" href="../vztahyMedziPojmami/index.html">Dôležité vzťahy medzi uvedenými pojmami</a>
        </li>
        <li class="nav-item">
-          <a class="nav-link" style="margin-bottom: 2rem;" href="#">Cvičenia</a>
+          <a class="nav-link" style="margin-bottom: 2rem;" href="../cvicenia/index.html">Cvičenia</a>
        </li>
     </ul>
  </div>
