mobile view improved by reducing padding on sites

--- a/styleAll.css
+++ b/styleAll.css
@@ -92,3 +92,8 @@ mjx-container.MathJax {
   height: 0.7rem;
 }
 
+@media screen and (max-width: 992px){
+  .container {
+    padding: 0 0.2rem;
+  }
+}
