--- a/styleAll.css
+++ b/styleAll.css
@@ -87,6 +87,11 @@ mjx-container.MathJax {
   margin: 1rem 0;
 }
 
+.rules {
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+    padding: 2rem;
+}
+
 .highlight {
   background-color: rgb(245, 245, 245);
   padding: 1rem;
