--- a/styleAll.css
+++ b/styleAll.css
@@ -88,7 +88,7 @@ mjx-container.MathJax {
 }
 
 .rules {
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+    border: 1px dotted orangered;
     padding: 2rem;
 }
 
