--- a/linearnaAlgebra/témy/detStvMatice/style.css
+++ b/linearnaAlgebra/témy/detStvMatice/style.css
@@ -33,3 +33,17 @@ input[type=number] {
   outline: none;
 }
 
+#matrix-input td {
+  padding: 0.2rem;
+}
+
+#matrix-input td:focus-within input {
+  outline: none;
+  background-color: greenyellow;
+}
+
+#matrix-input {
+  margin: auto;
+  border-right: 1px solid black;
+  border-left: 1px solid black;
+}
