--- a/styleAll.css
+++ b/styleAll.css
@@ -1,3 +1,10 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+p {
+  font-family: 'Roboto', sans-serif;
+}
+
 .offcanvas-backdrop {
   position: fixed;
   top: 56px;
