--- a/components/sidebar.html
+++ b/components/sidebar.html
@@ -10,6 +10,9 @@
             Domov
          </a>
       </li>
+      <li class="nav-item"><a class="nav-link" href="../sustavyLinearnychRovnic/index.html">
+            Sústavy lineárnych rovníc
+         </a></li>
       <hr>
       <li class="nav-item">
          <a class="nav-link " href="../uvod/index.html">Úvod</a>
