--- a/components/tab_links.html
+++ b/components/tab_links.html
@@ -1,9 +1,12 @@
 <li class="nav-item" role="presentation">
-    <button class="nav-link active" id="theory-tab" data-bs-toggle="tab" data-bs-target="#theory" type="button" role="tab" aria-controls="theory" aria-selected="true">Teória</button>
- </li>
- <li class="nav-item" role="presentation">
-    <button class="nav-link" id="sample-problems-tab" data-bs-toggle="tab" data-bs-target="#sample-problems" type="button" role="tab" aria-controls="sample-problems" aria-selected="false">Vypočítané príklady</button>
- </li>
- <li class="nav-item" role="presentation">
-    <button class="nav-link" id="practice-problems-tab" data-bs-toggle="tab" data-bs-target="#practice-problems" type="button" role="tab" aria-controls="practice-problems" aria-selected="false">Príklady na precvičenie</button>
- </li>
+   <button class="nav-link active" id="theory-tab" data-bs-toggle="tab" data-bs-target="#theory" type="button"
+      role="tab" aria-controls="theory" aria-selected="true">Teória</button>
+</li>
+<li class="nav-item" role="presentation">
+   <button class="nav-link" id="sample-problems-tab" data-bs-toggle="tab" data-bs-target="#sample-problems"
+      type="button" role="tab" aria-controls="sample-problems" aria-selected="false">Príklady</button>
+</li>
+<li class="nav-item" role="presentation">
+   <button class="nav-link" id="practice-problems-tab" data-bs-toggle="tab" data-bs-target="#practice-problems"
+      type="button" role="tab" aria-controls="practice-problems" aria-selected="false">Kalkulačky</button>
+</li>
