style of collapse sidear +border bottom

--- a/components/collapse_bar.html
+++ b/components/collapse_bar.html
@@ -1,4 +1,4 @@
-<div class="offcanvas-header">
+<div class="offcanvas-header" style="border-bottom: 1px solid lightblue">
    <div class="d-flex flex-column">
       <a class="nav-link" href="../../../landingPage/index.html">
          <svg style="margin-bottom: 5px; " xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
