--- a/landingPage/mainStyle.css
+++ b/landingPage/mainStyle.css
@@ -1,9 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
-body {
+/* body {
   background-color: white;
   font-family: "Roboto", sans-serif;
-}
+} */
 
 header {
   background-image: url("../images/newBG.svg");
