--- a/funkcie/styleGraf.css
+++ b/funkcie/styleGraf.css
@@ -89,9 +89,27 @@ input:focus {
 }
 
 .nav-link.active {
-  background-color: blue;
-  a {
-    color: white;
+  background-color: rgb(52, 52, 243);
+  border-radius: 8px;
+}
+
+.navbar-light .navbar-nav .nav-link.active{
+  color: white;
+}
+
+@media screen and (max-width: 991px) {
+  .nav-item {
+    width: 10rem;
+    margin-top: 9px;
+  }
+  .navbar-nav {
+    align-items: center;
+  }
+  #scrollspyHeading1 {
+    width: 95%;
+  }
+  .box {
+    width: 95%;
   }
 }
 
@@ -118,10 +136,6 @@ input:focus {
  
   
 }
-@media screen and (max-width: 380px) {
-  .bi-calculator {
-    display: block;
-  }}
 
   @media screen and (max-width: 608px) {
     #scrollspyHeading1 {
