fidex links and color adjustment

--- a/components/collapse_bar.html
+++ b/components/collapse_bar.html
@@ -1,6 +1,6 @@
 <div class="offcanvas-header" style="border-bottom: 1px solid grey; margin: 0.7rem 0; padding-bottom: 2rem;">
    <div class="d-flex flex-column">
-      <a class="nav-link" href="../../../index.html">
+      <a class="nav-link" href="../sustavyLinearnychRovnic/index.html">
          <svg style="margin-bottom: 5px; " xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
             class="bi bi-house" viewBox="0 0 16 16">
             <path
