--- a/funkcie/styleGraf.css
+++ b/funkcie/styleGraf.css
@@ -10,13 +10,13 @@ h2 {
 }
 
 section {
-  border: 1px solid lightgray;
   height: 400px;
   padding: 20px;
   margin: 10px;
 }
 
 #plotSettings {
+  border: 1px dashed rgb(52, 52, 243);
   width: 360px;
   height: 450px;
   background-color: white;
@@ -47,7 +47,7 @@ section {
 
 input {
   border: none;
-  border-bottom: 2px solid rgb(52, 52, 243);
+  border-bottom: 2px solid lightgray;
   text-align: center;
 }
 
@@ -88,8 +88,12 @@ input:focus {
    padding-top: 4rem;
 }
 
-.nav-link.active {
+.nav-link {
   border-radius: 8px;
+}
+
+.nav-link.active {
+  
   background-color: rgb(52, 52, 243);
   
 }
