--- a/styleAll.css
+++ b/styleAll.css
@@ -41,7 +41,7 @@ p {
   box-shadow: 8px 0 10px -4px rgba(0, 0, 0, 0.2);
 }
 
-.container::-webkit-scrollbar {
+/* .container::-webkit-scrollbar {
   width: 0;
 }
 
@@ -60,7 +60,7 @@ p {
 
 .container::-webkit-scrollbar-thumb:hover {
   background-color: white;
-}
+} */
 .nav-item {
   margin: 13px 9px 0 6px;
 }
