changed sidebar scrollbar

--- a/components/sidebar.html
+++ b/components/sidebar.html
@@ -45,3 +45,5 @@
 
    </ul>
 </div>
+<link rel="stylesheet" href="https://unpkg.com/simplebar@5.3.2/dist/simplebar.min.css" />
+<script src="https://unpkg.com/simplebar@5.3.2/dist/simplebar.min.js"></script>
