--- a/linearnaAlgebra/témy/sustavyLinearnychRovnic/style.css
+++ b/linearnaAlgebra/témy/sustavyLinearnychRovnic/style.css
@@ -1,3 +1,19 @@
 body {
     background-color: aliceblue;
 }
+
+.nav-link:hover {
+    transform: translateY(-2px);
+    color: black;
+  }
+  .home:hover {
+    transform: none;
+  }
+  .nav-link.active {
+    color: #504e4e !important;
+    text-decoration: underline;
+  }
+  
+  .home:hover {
+    background-color: #464343 !important;
+  }
